# docitup

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docitup/: __init__.py  base_loaders.py  docling_loaders.py  fitz_loaders.py  llamaparse_loaders.py  markitdown_loaders.py  pymupdf4llm_loaders.py  pypdf2_loaders.py  pypdf_loaders.py
dockitup/: base_loaders.py  docling_loaders.py  llamaparse_loaders.py  markitdown_loaders.py  pymupdf4llm_loaders.py
